--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
 /* General page styling */
 body {
-    font-family: "Chalkboard SE", "Comic Sans MS", cursive; 
+    font-family: "Bungee Hairline", serif; /* Body için Bungee Hairline */
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
     text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Hafif bir gölge ile koyulaştır */
+    -webkit-text-stroke: 0.8px black;
 }
 
 /* Heading style */
 h1 {
+    font-family: 'Doto', sans-serif;
     color: #333;
     font-size: 36px;
     margin-top: 50px;
+    font-weight: 700;
 }
 
 /* Paragraph style */
@@ -25,7 +29,7 @@ nav {
     background-color: #807c7c; 
     padding: 15px;
     text-align: center;
-    font-family: "Chalkboard SE", "Comic Sans MS", cursive; 
+    font-family: "Bungee Hairline", serif;
 }
 
 nav a {
