--- a/style.css
+++ b/style.css
@@ -208,13 +208,13 @@ textarea:focus::placeholder {
     display: flex;
     align-items: center; 
     justify-content: center;
-    gap: 5px;
+    gap: 1px;
     width: 100%;
     line-height: 1.2;
 }
 .icon-container {
-    position: absolute;
-    top: 45%;       
-    right: 415px;    
-    transform: translateY(-50%); 
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    margin-left: 5px; 
 }
